# Docstruct

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  precommit_log.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.gitlab/issue_templates/: Default.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.streamlit/: config.toml
docs/: issues.yaml  work-division.md
sample_data/: invoice.txt
scripts/: check_commit_message.py  create_gitlab_issues.py  download_model.py  generate_sample_data.py
spec-kit/: plan.md  spec.md
specs/document_extraction/: plan.md  spec.md  tasks.md
src/docstruct/: __init__.py  app_streamlit.py  cli.py  gbnf.py  llm_extract.py  ocr.py  pipeline.py  preprocess.py  runtime_status.py  schemas.py  validate.py
tests/: test_check_commit_message.py  test_no_network.py  test_pipeline.py  test_runtime_status.py  test_schemas.py
