[build-system]
requires = ["setuptools>=68", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "docstruct"
version = "0.2.0"
description = "Offline, CPU-only document -> structured JSON extractor"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "pytesseract>=0.3.10",
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
    "opencv-python-headless>=4.9",
    "pydantic>=2.6",
    "typer>=0.12",
    "requests>=2.31",
]

[project.optional-dependencies]
llm = ["llama-cpp-python>=0.2.90"]
web = ["streamlit>=1.33"]
dev = ["pytest>=8.0", "ruff>=0.4", "black>=24.0", "mypy>=1.9", "bandit>=1.7", "pip-audit>=2.7"]

[project.scripts]
docstruct = "docstruct.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer.Argument()/typer.Option() in default args is the documented, correct way to
# use Typer — not the antipattern B008 is meant to catch (mutable default args).
"src/docstruct/cli.py" = ["B008"]
# Long lines here are CSS rules and HTML template strings, not Python logic — the
# line-length rule exists to keep code reviewable, which doesn't apply to a one-line
# CSS class declaration.
"src/docstruct/app_streamlit.py" = ["E501"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
